--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
             <!-- FIXME use handwritten font -->
             <span class="center">
                 I'm social!
-                <i class="far fa-hand-point-up"></i>
+                <i class="far fa-hand-point-up bump"></i>
             </span>
         </div>
 
