--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -65,8 +65,7 @@
                 <i class="fab fa-creative-commons"></i>
                 <i class="fab fa-creative-commons-by"></i>
                 <i class="fab fa-creative-commons-sa"></i>
-            </a>
-            unless otherwise stated
+            </a> unless otherwise stated
         </p>
     </footer>
 
