--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -47,7 +47,7 @@ body {
   margin: 0 auto;
   color: var(--color-main);
   background-color: var(--color-bkg-dark);
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: lighter;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -64,6 +64,17 @@ footer {
 
 section.list {
   padding-top: 1rem;
+}
+
+footer.site {
+  margin-left: -1rem;
+  margin-right: -1rem;
+  padding: 5rem 0.5rem 1rem;
+  background: linear-gradient(0deg, var(--color-bkg-dark), var(--color-bkg-light));
+
+  p + p {
+    margin-top: 1rem;
+  }
 }
 
 section {
@@ -131,17 +142,37 @@ div.claim {
   justify-content: space-around;
 
   h1,
-  h2 {
+  h2,
+  h3 {
     font-size: 1.5rem;
     font-weight: normal;
 
     a {
       text-decoration: underline;
     }
+
+    a:hover {
+      text-decoration: none;
+    }
   }
 
-  h2 {
+  h2,
+  h3 {
     padding-top: 1rem;
+  }
+
+  h1 > strong {
+    padding-left: 0.5rem;
+    line-height: 2rem;
+    word-spacing: -0.5rem;
+    font-size: 1.2rem;
+    font-family: 'Press Start 2P', monospace;
+    font-weight: normal;
+  }
+
+  h1 > strong::after {
+    content: '_';
+    animation: blink 1s step-start 0.5s 5 normal backwards;
   }
 }
 
@@ -167,6 +198,7 @@ div.social {
   justify-content: space-between;
 
   ul {
+    max-width: 300px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -268,6 +300,12 @@ div.index_content {
 @keyframes fadeEffect {
   from { opacity: 0; }
   to { opacity: 1; }
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
 }
 
 @media screen and (min-width: 800px) {
