--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -67,8 +67,7 @@ section.list {
 }
 
 footer.site {
-  margin-left: -1rem;
-  margin-right: -1rem;
+  border-radius: 1rem;
   padding: 5rem 0.5rem 1rem;
   background: linear-gradient(0deg, var(--color-bkg-dark), var(--color-bkg-light));
 
@@ -159,6 +158,12 @@ div.claim {
   h2,
   h3 {
     padding-top: 1rem;
+  }
+
+  h1 > em:first-child {
+    display: inline-block;
+    font-style: normal;
+    animation: flip 0.5s linear 3;
   }
 
   h1 > strong {
@@ -278,7 +283,7 @@ div.index_content {
 
   7% {
     color: var(--color-secondary);
-    transform: translateY(-50%);
+    transform: translate(20%, -50%) scale(1.8);
   }
 
   14% {
@@ -288,7 +293,7 @@ div.index_content {
 
   21% {
     color: var(--color-secondary);
-    transform: translateY(-50%);
+    transform: translate(20%, -50%)  scale(1.8);
   }
 
   28% {
@@ -305,6 +310,13 @@ div.index_content {
 @keyframes blink {
   50% {
     opacity: 0;
+  }
+}
+
+@keyframes flip {
+  50% {
+    transform: rotateX(180deg);
+    color: var(--color-secondary);
   }
 }
 
