--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,8 +23,9 @@
     <style>{{ .Content | safeCSS }}</style>
     {{- end -}}
 
-    <!-- FIXME move to partial -->
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    {{- block "head" . }}{{ end -}}
 </head>
 
 <body>
