--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
         <div class="social">
             {{- partial "social_icons" .Site.Menus.socialnetworks -}}
             <!-- FIXME use handwritten font -->
-            <span class="center">
+            <span>
                 I'm social!
                 <i class="far fa-hand-point-up bump"></i>
             </span>
