--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@
 :root {
   --color-main: #ff7a00;
   --color-secondary: #ffd900;
+  --color-text: white;
   --color-bkg-dark: #050723;
   --color-bkg-light: #151737;
   // would be nice to use --responsive-max-width in the media query but at the moment
@@ -77,7 +78,7 @@ footer.site {
 }
 
 section {
-  color: white;
+  color: var(--color-text);
   background-color: var(--color-bkg-light);
   border-radius: 1rem;
 
@@ -139,6 +140,11 @@ div.claim {
   display: flex;
   flex-flow: column wrap;
   justify-content: space-around;
+  color: var(--color-text);
+
+  a {
+    color: var(--color-text);
+  }
 
   h1,
   h2,
@@ -163,7 +169,7 @@ div.claim {
   h1 > em:first-child {
     display: inline-block;
     font-style: normal;
-    animation: flip 0.5s linear 3;
+    animation: flip 1s ease-in-out 1;
   }
 
   h1 > strong {
@@ -183,7 +189,7 @@ div.claim {
   h2 {
     > a:not(:last-child) {
       text-decoration: none;
-      color: var(--color-secondary);
+      color: var(--color-main);
     }
 
     > a:not(:last-child)::before {
@@ -225,6 +231,7 @@ div.social {
   }
 
   span {
+    color: var(--color-text);
     margin-top: 1rem;
   }
 }
@@ -286,6 +293,8 @@ div.index_content {
 }
 
 .fa-hand-point-up {
+  padding-left: 0.2rem;
+  color: var(--color-main);
   animation: bump 5s ease-out infinite 4s;
 }
 
@@ -325,8 +334,18 @@ div.index_content {
 }
 
 @keyframes flip {
-  50% {
+  25% {
     transform: rotateX(180deg);
+    color: var(--color-secondary);
+  }
+
+  50% {
+    transform: rotateY(180deg);
+    color: var(--color-secondary);
+  }
+
+  75% {
+    transform: rotateX(0deg);
     color: var(--color-secondary);
   }
 }
