--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -233,6 +233,8 @@ div.social {
   span {
     color: var(--color-text);
     margin-top: 1rem;
+    font-family: 'Rock Salt', cursive;
+    font-size: 1.5rem;
   }
 }
 
