--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{- define "head" -}}
     <!-- FIXME move to partial -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap&text=as%20Code_" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap&text=I%27m+social%21" rel="stylesheet">
 {{ end -}}
 
 {{- define "header" -}}
@@ -14,7 +15,7 @@
             {{- partial "social_icons" .Site.Menus.socialnetworks -}}
             <!-- FIXME use handwritten font -->
             <span>
-                I'm social!
+                I'm social !
                 <i class="far fa-hand-point-up bump"></i>
             </span>
         </div>
