--- a/layouts/partials/index_row.html
+++ b/layouts/partials/index_row.html
@@ -10,7 +10,7 @@
         class="row_{{ $row }}
                col_{{ add $section_index 1 }}
                {{ if eq $section_index 0 }}selected{{ end }}
-               small-only"
+               small_only"
         hidden
     >
         {{ $section.Title }}
