--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -178,7 +178,7 @@ div.claim {
   h1 > em:first-child {
     display: inline-block;
     font-style: normal;
-    animation: flip 1s ease-in-out 1;
+    animation: flip 1s ease-in-out 1 2s;
   }
 
   h1 > strong {
@@ -192,7 +192,7 @@ div.claim {
 
   h1 > strong::after {
     content: '_';
-    animation: blink 1s step-start 0.5s 5 normal backwards;
+    animation: blink 1s step-start 3 4s;
   }
 
   h2 {
@@ -248,10 +248,11 @@ div.social {
     font-family: 'Rock Salt', cursive;
     font-size: 1.5rem;
   }
-}
 
-.rss {
-  background-color: red;
+  .fa-hand-point-up {
+    padding-left: 0.2rem;
+    animation: bump 5s ease-out 2 10s;
+  }
 }
 
 nav.sitenav {
@@ -297,117 +298,13 @@ div.index_content {
   content: "\f35d";
 }
 
-.small-only {
+.small_only {
   display: initial;
 }
 
+// FIXME
 .animated {
   animation: fadeEffect 0.7s;
-}
-
-.fa-hand-point-up {
-  padding-left: 0.2rem;
-  color: var(--color-main);
-  animation: bump 5s ease-out infinite 4s;
-}
-
-@keyframes bump {
-  0% { transform: translateY(0); }
-
-  7% {
-    color: var(--color-secondary);
-    transform: translate(20%, -50%) scale(1.8);
-  }
-
-  14% {
-    color: var(--color-secondary);
-    transform: translateY(0);
-  }
-
-  21% {
-    color: var(--color-secondary);
-    transform: translate(20%, -50%)  scale(1.8);
-  }
-
-  28% {
-    color: var(--color-main);
-    transform: translateY(0);
-  }
-}
-
-@keyframes fadeEffect {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-@keyframes blink {
-  50% {
-    opacity: 0;
-  }
-}
-
-@keyframes flip {
-  25% {
-    transform: rotateX(180deg);
-    color: var(--color-secondary);
-  }
-
-  50% {
-    transform: rotateY(180deg);
-    color: var(--color-secondary);
-  }
-
-  75% {
-    transform: rotateX(0deg);
-    color: var(--color-secondary);
-  }
-}
-
-@media screen and (min-width: 800px) {
-  body > header {
-    display: flex;
-    justify-content: center;
-  }
-
-  div.index {
-    grid-template-rows: unset;
-    grid-template-columns: 2fr 1fr;
-    max-width: 1000px;
-    margin: initial;
-
-    h1 {
-      align-self: center;
-    }
-  }
-
-  div.index_content {
-    display: grid;
-    gap: 4rem;
-  }
-
-  div.index_content.row_1 {
-    grid-template-columns: 5fr 3fr;
-  }
-
-  div.index_content.row_2 {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  section > header {
-    padding: initial;
-  }
-
-  section + section {
-    margin-top: unset;
-  }
-
-  nav.sitenav {
-    margin: initial;
-
-    > ul {
-      display: initial;
-    }
-  }
 }
 
 iframe {
@@ -418,3 +315,5 @@ iframe {
 .fa-3x {
   font-size: 2.5rem;
 }
+
+@import 'keyframes', 'large';
