--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -31,6 +31,36 @@ a:hover {
   color: $color-secondary;
 }
 
+li.button > a {
+  padding: 0.6rem;
+  border-radius: 0.5rem;
+  color: $color-bkg-dark;
+  background-color: $color-main;
+}
+
+footer.site a {
+  padding: 0 0.3rem;
+
+  > i + i {
+    padding-left: 0.2rem;
+  }
+}
+
+div.claim {
+  a {
+    text-decoration: underline;
+  }
+
+  h2 > a:last-child {
+    text-decoration: none;
+  }
+
+  h3 a:hover {
+    text-decoration: none;
+    color: $color-secondary;
+  }
+}
+
 p,
 h1,
 h2,
@@ -65,25 +95,6 @@ header {
 footer {
   text-align: center;
   padding-bottom: 1rem;
-}
-
-footer.site a {
-  padding: 0 0.3rem;
-
-  > i + i {
-    padding-left: 0.2rem;
-  }
-}
-
-div.claim a {
-  color: $color-text;
-}
-
-li.button > a {
-  padding: 0.6rem;
-  border-radius: 0.5rem;
-  color: $color-bkg-dark;
-  background-color: $color-main;
 }
 
 li.button > a:hover {
@@ -156,15 +167,6 @@ div.claim {
   h3 {
     font-size: 1.5rem;
     font-weight: normal;
-
-    a {
-      text-decoration: underline;
-    }
-
-    a:hover {
-      text-decoration: none;
-      color: $color-secondary;
-    }
   }
 
   h2,
