--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,7 +2,8 @@ $color-main: #ff7a00;
 $color-secondary: #ffd900;
 $color-text: white;
 $color-bkg-dark: #050723;
-$color-bkg-light: #151737;
+// $color-bkg-light: #151737;
+$color-bkg-light: rgb(29, 1, 29);
 
 // XXX :root is parsed by index-tab.js and must be the 1st stanza in this file
 :root {
@@ -44,6 +45,7 @@ footer.site a {
 }
 
 li.button > a {
+  border: 1px solid;
   padding: 0.6rem;
   border-radius: 0.5rem;
   color: $color-bkg-dark;
@@ -52,7 +54,6 @@ li.button > a {
 
 li.button > a:hover {
   background-color: $color-bkg-light;
-  border: 1px solid;
   color: $color-secondary;
 }
 
@@ -82,14 +83,24 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   color: $color-main;
-  background-color: $color-bkg-dark;
+  background: linear-gradient(to bottom, $color-bkg-light 0%, $color-bkg-dark 30%);
   font-family: 'Roboto', sans-serif;
   font-weight: lighter;
   padding-left: 1rem;
   padding-right: 1rem;
-  // background-image: url('img/neptune.png'), linear-gradient(to bottom, black, $color-bkg-dark);
-  // background-repeat: no-repeat;
-  // background-position: top;
+}
+
+.background_img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('img/background.jpg');
+  opacity: 0.2;
+  background-repeat: no-repeat;
+  background-position: top center;
+  z-index: -1;
 }
 
 header {
@@ -216,6 +227,8 @@ nav > ul {
 section {
   color: $color-text;
   background-color: $color-bkg-light;
+  // background: linear-gradient(to bottom, $color-bkg-dark, $color-bkg-light);
+  filter: alpha(opacity=100);
   border-radius: 1rem;
 
   > header {
