--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -23,7 +23,7 @@
 <nav class="paginator">
     <ul>
         {{- if $paginator.HasPrev -}}
-        <li>
+        <li class="button">
             <a
                 href="{{ $paginator.Prev.URL }}"
                 title="Newer articles"
@@ -31,7 +31,7 @@
         </li>
         {{- end -}}
         {{- if $paginator.HasNext -}}
-        <li>
+        <li class="button">
             <a
                 href="{{ $paginator.Next.URL }}"
                 title="Older articles"
