--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -90,17 +90,20 @@ body {
   padding-right: 1rem;
 }
 
-.background_img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('img/background.jpg');
-  opacity: 0.2;
+.file_not_found {
+  height: 620px;
+  background-image: url('img/background-404.jpg');
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: top left;
   z-index: -1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 2rem;
+  font-family: 'Press Start 2P', monospace;
+  border-radius: 2rem;
+  text-align: center;
+  padding: 1rem;
 }
 
 header {
@@ -227,7 +230,6 @@ nav > ul {
 section {
   color: $color-text;
   background-color: $color-bkg-light;
-  // background: linear-gradient(to bottom, $color-bkg-dark, $color-bkg-light);
   filter: alpha(opacity=100);
   border-radius: 1rem;
 
