--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -93,7 +93,7 @@ body {
 
 .file_not_found {
   height: 620px;
-  background-image: url('img/background-404.jpg');
+  background-image: url('/img/background-404.jpg');
   background-repeat: no-repeat;
   background-position: top left;
   z-index: -1;
