--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -91,7 +91,7 @@ body {
   padding-right: 1rem;
 }
 
-.file_not_found {
+.page_not_found {
   height: 620px;
   background-image: url('/img/background-404.jpg');
   background-repeat: no-repeat;
