--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,9 +1,9 @@
 {{- define "head" -}}
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap&text=as%20File%20not%20found" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap&text=as%20Page%20not%20found" rel="stylesheet">
 {{ end -}}
 
 {{- define "header" -}}
 
-    <h1 class="file_not_found">File not found</h1>
+    <h1 class="page_not_found">Page not found</h1>
 
 {{- end -}}
