--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,3 +1,12 @@
+{{- define "head" -}}
+    {{- $title := .Page.Title }}
+    <title>{{ $title }}</title>
+
+    {{- with .OutputFormats.Get "rss" -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $title | safeHTML }}
+    {{ end -}}
+{{ end -}}
+
 {{ define "header" }}
 {{- $title := printf `%s - %s` (.Param "author") .Page.Title -}}
 <h1 class="center">
