--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,5 @@
 {{- define "head" -}}
+    <title>{{ .Site.Title }} - {{ .Title }}</title>
     {{ partial "google_font" (dict "fontFamily" "Press Start 2P" "text" "Page not found") }}
 {{ end -}}
 
