--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,3 +1,7 @@
+{{- define "head" -}}
+    <title>{{ .Title }}</title>
+{{- end -}}
+
 {{ define "header" }}
 <h1>{{ .Title }}</h1>
 <small>{{ partial "date" .Date }}</small>
